--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -33,7 +33,6 @@
     "# Import the OpenWeatherMap API key\n",
     "# from api_keys import (weather_api_key, geoapify_key) #this doesn't work for some /microsoft/pyright/blob/main/docs/configuration.mdreason\n",
     "from api_keys import weather_api_key\n",
-    "from api_keys import geoapify_key\n",
     "\n",
     "# Import citipy to determine the cities based on latitude and longitude\n",
     "from citipy import citipy"
@@ -2399,6 +2398,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the Suthern hemisphere, the further you go south, the hotter it becomes. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2467,6 +2474,14 @@
     "\n",
     "axn = southern_hemi_df.plot.scatter(x = 'Lat', y='Humidity')\n",
     "plot_linear_regression(x,y,'Humidity',(6,-10),8)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Higher latitudes have experience more humidity. Temperatures directly influence the moisture holding capacity of the atmosphere."
    ]
   },
   {
@@ -2555,6 +2570,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clouds are rare  and deserts are common between 15 and 30 degrees north and south of the equator."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2595,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2630,6 +2653,14 @@
    "metadata": {},
    "source": [
     "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regions near the equator are characterized by low winds, while mid latitudes experience much faster airflow. "
    ]
   },
   {
